When a user is logged in and the admin bar is showing, the gallery overlay controls are hidden behind the admin bar. This fixes it.

--- a/css-dev/burf-theme/_gallery.scss
+++ b/css-dev/burf-theme/_gallery.scss
@@ -32,3 +32,9 @@ $wp-supported-gallery-columns: 9;
 		}
 	}
 }
+
+.logged-in.admin-bar {
+	.lg-outer {
+		margin-top: 32px;
+	}
+}
